Fixed issue with select placeholder on iOS

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,8 +17,8 @@
   --on-surface: #FFFFFF;
   --hover: #FFFFFF1A;
   --separator: #313131;
-  --border: #6F6F6F;
   --button: #161A1D;
+  --border: #A6A6A6;
 }
 
 :root[data-theme="light"] {
@@ -29,7 +29,6 @@
   --on-surface: #000000;
   --hover: #0000001A;
   --separator: #E2E2E2;
-  --border: #DEDEDE;
   --button: #F3F9FE;
 }
 
